# model-downloader-util

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: __init__.py  downloader_example.py
modeldownloaderutil/: __init__.py  _download.py  cache.py  downloader.py  env.py  lock.py  progress.py
modeldownloaderutil/providers/: base.py  gcs.py  git.py  git_lfs.py  http.py  local.py  s3.py
tests/: test_cache.py
