[project]
name = "modeldownloaderutil"
version = "1.0.0"
description = "Download model files from local paths, HTTP, S3-compatible storage, GCS, and Git LFS."
authors = [{ name = "Ashok Pant", email = "ashok@treeleaf.ai" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["model", "download", "s3", "gcs", "rustfs", "minio", "git-lfs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "boto3>=1.43.22",
    "google-cloud-storage>=3.11.0",
    "platformdirs>=4.3.8",
    "python-dotenv>=1.1.0",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modeldownloaderutil"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.9"]

[tool.uv]
package = true

[tool.ruff]
line-length = 160
target-version = "py313"
exclude = [
    ".git", ".idea", ".eggs", "examples", "docs",
    ".tox", "bin", "dist", "tools", "*.egg-info", "__init__.py", "*.yml",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
